# QuantLite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
docs/: alerts.md  antifragility.md  api.md  architecture.md  benchmarks.md  contagion.md  copulas.md  data.md  decision_audit.md  diversification.md  dynamic_kelly.md  ensemble_allocators.md  ergodicity.md  exchange_risk.md  factors_classical.md  factors_custom.md  factors_tail_risk.md  forensics.md  getting-started.md  index.md  interactive_viz.md  network.md  onchain_risk.md  online_regimes.md  overfitting.md  performance.md  pipeline.md  portfolio.md  quickstart.md  regime_black_litterman.md  regime_integration.md  regime_narratives.md  regimes.md  reports.md  resampling.md  risk.md  risk_attribution.md  scenarios.md  simulation_copula.md  simulation_evt.md  (+8 more)
docs/images/: benchmark_results.json
examples/: alert_charts.py  antifragility_charts.py  antifragility_demo.py  backtest_tearsheet.py  contagion_demo.py  copula_showcase.py  correlation_stress.py  data_charts.py  diversification_demo.py  ergodicity_charts.py  ergodicity_demo.py  evt_analysis.py  exchange_demo.py  factors_classical_demo.py  factors_custom_demo.py  factors_tail_demo.py  forensics_demo.py  generate_allocation_charts.py  generate_explain_charts.py  network_demo.py  onchain_demo.py  online_regime_charts.py  overfitting_demo.py  pipeline_demo.py  portfolio_construction.py  regime_detection.py  regime_integration_demo.py  reports_charts.py  resampling_demo.py  risk_dashboard.py  run_benchmarks.py  scenario_charts.py  scenario_stress_test.py  simulation_copula_demo.py  simulation_evt_demo.py  simulation_regime_demo.py  stablecoin_demo.py  streaming_charts.py
src/quantlite/: __init__.py  backtesting.py  data_generation.py  metrics.py  monte_carlo.py  pipeline.py  visualisation.py
src/quantlite/alerts/: __init__.py
src/quantlite/antifragile/: __init__.py
src/quantlite/backtesting/: __init__.py  analysis.py  engine.py  legacy.py  signals.py
src/quantlite/benchmark/: __init__.py  compare.py  runner.py  speed.py  tail_events.py
src/quantlite/contagion/: __init__.py
src/quantlite/core/: __init__.py  types.py
src/quantlite/crypto/: __init__.py  exchange.py  onchain.py  stablecoin.py
src/quantlite/data/: __init__.py  base.py  cache.py  crypto.py  fred.py  local.py  registry.py  stream.py  yahoo.py
src/quantlite/dependency/: __init__.py  clustering.py  copulas.py  correlation.py
src/quantlite/distributions/: __init__.py  fat_tails.py
src/quantlite/diversification/: __init__.py
src/quantlite/ergodicity/: __init__.py
src/quantlite/explain/: __init__.py  attribution.py  audit.py  narratives.py  whatif.py
src/quantlite/factors/: __init__.py  classical.py  custom.py  tail_risk.py
src/quantlite/forensics/: __init__.py
src/quantlite/instruments/: __init__.py  bond_pricing.py  exotic_options.py  option_pricing.py
src/quantlite/network/: __init__.py
src/quantlite/overfit/: __init__.py
tests/: test_alerts.py  test_allocation_engine.py  test_analysis.py  test_antifragile.py  test_backtesting.py  test_benchmarks.py  test_changepoint.py  test_clustering.py  test_conditional.py  test_contagion.py  test_copulas.py  test_correlation.py  test_crypto_exchange.py  test_crypto_onchain.py  test_crypto_stablecoin.py  test_data_connectors.py  test_data_generation.py  test_diversification.py  test_engine.py  test_ergodicity.py  test_evt.py  test_explainability.py  test_factors_classical.py  test_factors_custom.py  test_factors_tail_risk.py  test_fat_tails.py  test_forensics.py  test_hmm.py  test_instruments.py  test_metrics.py  test_monte_carlo.py  test_network.py  test_online_regime.py  test_optimisation.py  test_overfit.py  test_pipeline.py  test_plotly_viz.py  test_rebalancing.py  test_regime_integration.py  test_report.py  (+13 more)
(+49 files in other folders)
